--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=cqrs-bank-account-service
+
+server.port=8066
+
+
+spring.datasource.url=jdbc:h2:mem:account-db
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=update
+
+axon.serializer.events=jackson
+axon.serializer.messages=jackson
+axon.serializer.general=jackson
