Feat: Edited pom.xml file to change java version

--- a/.gitignore
+++ b/.gitignore
@@ -25,9 +25,12 @@ target/
 /dist/
 /nbdist/
 /.nb-gradle/
+Example_data.md
 build/
 !**/src/main/**/build/
 !**/src/test/**/build/
+
+
 
 ### VS Code ###
 .vscode/
